# mailcast

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  git-over-fs.sh  mailcast.schema.json  mailcast.yaml  main.py  pyproject.toml  settings.json  settings.project.json
src/mailcast/: __init__.py  mailcast.schema.json
src/mailcast/cli/: __init__.py  schema.py
src/mailcast/helpers/: email_builder.py  google_sheets_reader.py  mailing_list.py
src/mailcast/lib/message/: email_builder.py  format.py  google_sheets_reader.py  mailing_list.py
src/mailcast/lib/specification/: __init__.py  concurrency.py  mailing_list.py  message.py  rfc.py
src/mailcast/schemas/: __init__.py  environment.py  specification.py
src/mailcast/scripts/: __init__.py  registration.py
